main.css
*,
*::before,
*::after {
    margin: 0;
    box-sizing: border-box;
}

body {
    font-family: 'Work Sans', sans-serif;
    background-color: #2c2441;
}

.banner {
    display: flex;
    align-items: center;
    justify-content: center;
    margin-top: 2rem;
}

.banner .container {
    width: 55%;
    display: flex;
    justify-content: space-between;
}

.banner img {
    width: 7rem;
}

.banner nav {
    display: flex;
    gap: 5rem;
}

.banner nav a {
    text-decoration: none;
    color: white;
}

.features {
    display: flex;
    align-items: center;
    justify-content: center;
    margin: 1rem;
}

.features form {
    display: flex;
    align-items: center;
    justify-content: space-between;
}

.features .container {
    width: 56%;
}

.features .search {
    width: 40%;
    height: 3rem;
    padding: .4rem 1rem;
    font-size: 1.2rem;
}

.features .options-btn {
    padding: .9rem 2rem;
    background-color: rgba(44, 36, 65, 0);
    color: white;
    border: 1px solid white;
    font-family: 'Work Sans', sans-serif;
    font-size: 1.2rem;
    margin-left: 1rem;
}

.features .options-btn .arrow {
    border: solid white;
    border-width: 0 3px 3px 0;
    display: inline-block;
    padding: 4px;
    transform: rotate(45deg);
    margin-bottom: .15rem;
    margin-left: 1rem;
}

.deals {
    display: flex;
    justify-content: center;
}

.deals .container {
    /* Change to Grid in the future */
    display: flex;
    flex-direction: column;
    gap: 1rem;
    width: 55%;
}

.deals .container .deal {
    display: flex;
    align-items: center;
    color: white;
    text-decoration: none;
    background-image: linear-gradient(to right, #5f488b, #2c2441);
}

/* Rare Game Colors */
.deals .container .rare {
    border: 2px solid #00B2FF;
}

.deals .container .rare img {
    border-right: 2px solid #00B2FF;
}

.deals .rare .rating {
    color: #00B2FF;
}


.deals .container h2,
.deals .container p {
    font-weight: 400;
}


/* Game Image */
.deals .container .deal img {
    width: 18rem;
}

.deals .game-stats {
    width: 100%;
    display: flex;
    align-items: center;
    justify-content: space-between;
    margin: 0 2rem;
}

.deals .game-stats .game-info {
    display: flex;
    flex-direction: column;
    gap: .3rem;
}

/* Steam Game Rating */
.deals .game-stats .game-info p {
    color: #AC96D8;
}

/* Deal Rating */


.deals .game-stats .game-info .separator {
    margin: 0 .5rem;
}

.deals .game-price .original-price {
    color: #AC96D8;
    text-decoration: line-through;
    font-size: 1rem;
}

.deals .game-price .deal-price {
    font-size: 1.8rem;
    margin-left: .5rem;
}

@media (max-width: 1300px) {

    .deals .container .deal {
        flex-direction: column;
    }

    .deals .container {
        width: 292px;
    }

    .deals .container a img {
        /* width: 18rem; */
        border-right-width: 0px;
        border-bottom: 2px solid #FFB800;
    }

    .deals .game-stats {
        width: 100%;
        flex-direction: column;
        align-items: unset;
        justify-content: unset;
        margin: unset;
        padding: 1rem;
        /* padding-left: 3rem; */
    }

    .deals .game-stats .game-info {
        margin-bottom: 1rem;
    }

    .deals .game-stats .game-info .game-title {
        font-size: 1rem;
    }

    .deals .game-stats .game-info p {
        font-size: .8rem;
    }

    .game-price p {
        display: flex;
        flex-direction: column;
    }

    .deals .game-price .deal-price {
        margin-left: 0;
    }

    .features .container {
        width: 292px;
    }

    .features .search {
        width: 100%;
        padding: 1.5rem 1rem;
    }

    .features form {
        flex-direction: column;
    }

    .features .options {
        display: flex;
        margin-top: 1rem;
    }

    .features .options-btn {
        width: 5rem;
        font-size: .8rem;
        padding: .5rem 0;
    }

    .features .options-btn .arrow {
        display: none;
    }

    .banner nav {
        display: none;
    }

    .banner .container {
        align-items: center;
        justify-content: center;
    }
}

